# ausupply.github.io

./: .gitignore  A-U text.txt  CNAME  README.md  StyleSheet.css  audex.html  audex21.html  audex22.html  audex23  audex23.html  cata.html  constantenergyconsumption.html  contact.html  csmulticast.html  drawma.html  history.html  how-euclid-got-his-groove-back.html  index.html  index2.html  mess  mind-xor-pees-and-qeues.html  mire.html  notes.html  ounds.html  package.json  pohs.html  poop.js  sketchbook.html  spotdown.html  this-song-is-a-junkyard.html  unidentified-unknown-location.html  vcfmw.css
.github/: dependabot.yml
.github/workflows/: daily-midi.yml  daily-prompt.yml  generate-history.yml  optimize-images.yml  scrape-drawma.yml
docs/: AUDIO-UNITS-SUPPLY-WEB-TOOLS.md
docs/plans/: 2026-01-30-slack-song-generator-implementation.md  2026-01-30-slack-song-title-generator-design.md  2026-01-30-surreal-prompt-bot-design.md  (+11 more)
history/: manifest.json
img/drawma/: manifest.json  (+1 more)
midi-bot/: bot.py  generate_midi.js  package-lock.json  package.json
scripts/: generate-history.sh
slack-song-generator/: .env.example  .gitignore  README.md  generate-song-page.py  pyproject.toml
slack-song-generator/src/: cache.py  cli.py  filter.py  generator.py  slack_fetcher.py
slack-song-generator/src/templates/: chaos.html.j2
slack-song-generator/tests/: test_cache.py  test_filter.py  test_generator.py  test_integration.py  test_slack_fetcher.py
surreal-prompt-bot/: README.md  bot.py  config.yaml  inspirations.txt  prompt_template.txt  requirements.txt  scrape_gallery.py
(+134 files in other folders)
