[project]
name = "slack-song-generator"
version = "0.1.0"
description = "Generate chaotic geocities-style pages from Slack song titles"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
generate-song-page = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
